public class Nodo {
    Agente agente;
    Nodo siguiente;

    public Nodo(Agente agente) {
        this.agente = agente;
        this.siguiente = null;
    }
}
